change cursor as a pointer when hover over the icons

--- a/style.css
+++ b/style.css
@@ -241,6 +241,9 @@ footer p {
 .color-white {
     background: white;
 }
+.cursor:hover {
+    cursor: pointer;
+}
 
 /* list area */
 #list-change-2 {
