--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer {
     left: 0;
     bottom: 5px;
     width: 100%;
-    background: inherit;
+    background: transparent;
     color: inherit;
     text-align: center;
 }
@@ -358,6 +358,7 @@ footer p {
     position: fixed;
     bottom: 2%;
     right: 2%;
+    z-index: 10;
 }
 #back-to-top:hover {
     cursor: pointer;
